emulator/tests/snapshots/diagnostics__multiple_errors_recovery.snap
---
source: emulator/tests/diagnostics.rs
assertion_line: 107
expression: "check_parse_errors(\"main:\\n    xyz\\n    add %a, %b\\n    !!!\\n    reset\")"
---
error: unexpected 'x', expected something else, instruction or directive, end of input
  ┌─ test.S:2:5
  │
2 │     xyz
  │     ^ unexpected 'x', expected something else, instruction or directive, end of input

error: unexpected '!', expected something else, instruction or directive, end of input
  ┌─ test.S:4:5
  │
4 │     !!!
  │     ^ unexpected '!', expected something else, instruction or directive, end of input
